--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,6 @@
         "beyondcode/laravel-dump-server": "^2.0",
         "fakerphp/faker": "^1.19",
         "filp/whoops": "^2.14",
-        "laravel/telescope": "^5.0",
         "mockery/mockery": "^1.5.0",
         "nunomaduro/collision": "^8.5",
         "phpunit/phpunit": "^11.0",
@@ -58,8 +57,7 @@
     "extra": {
         "laravel": {
             "dont-discover": [
-                "barryvdh/laravel-ide-helper",
-                "laravel/telescope"
+                "barryvdh/laravel-ide-helper"
             ]
         }
     },
