--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
             "app/helpers.php"
         ],
         "classmap": [
-            "database/seeds",
+            "database/seeders",
             "database/factories"
         ],
         "psr-4": {
