add specialized order duplication modes

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
         "@vue/composition-api": "^1.7.2",
         "algoliasearch": "^5.15.0",
         "autoprefixer": "^10.4.20",
+        "baseline-browser-mapping": "^2.9.19",
         "bun": "^1.1.38",
-        "caniuse-lite": "^1.0.30001735",
+        "caniuse-lite": "^1.0.30001769",
         "canvas": "^2.11.2",
         "chart.js": "^4.4.7",
         "chartjs-plugin-datalabels": "^2.2.0",
