--- a/package.json
+++ b/package.json
@@ -1,87 +1,90 @@
 {
-    "name": "lyntouch-database",
-    "version": "1.0.0",
-    "type": "module",
-    "no-optional": "true",
-    "license": "UNLICENSED",
-    "author": "Andrius Solopovas <andrius.solopovas@gmail.com>",
-    "description": "Lyntouch Database and Invoicing System",
-    "private": true,
-    "scripts": {
-        "start": "npm run dev",
-        "dev": "vite",
-        "prod": "vite build",
-        "phpunit": "phpunit",
-        "phpunit-watch": "phpunit-watcher watch",
-        "test": "vitest",
-        "test:ui": "vitest --ui",
-        "test:run": "vitest run"
-    },
-    "dependencies": {
-        "@types/algoliasearch": "^4.0.4",
-        "@types/lodash-es": "^4.17.12",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "@vue/composition-api": "^1.7.2",
-        "algoliasearch": "^5.15.0",
-        "autoprefixer": "^10.4.20",
-        "baseline-browser-mapping": "^2.9.19",
-        "bun": "^1.1.38",
-        "caniuse-lite": "^1.0.30001769",
-        "canvas": "^2.11.2",
-        "chart.js": "^4.4.7",
-        "chartjs-plugin-datalabels": "^2.2.0",
-        "date-fns": "^4.1.0",
-        "hammerjs": "^2.0.8",
-        "install": "^0.13.0",
-        "js-cookie": "^3.0.5",
-        "laravel-mix": "^6.0.49",
-        "lodash": "^4.17.21",
-        "lodash-es": "^4.17.21",
-        "npm": "^10.9.1",
-        "pluralize": "^8.0.0",
-        "prettier": "^3.4.2",
-        "qs": "^6.13.1",
-        "quill": "^2.0.3",
-        "rangy": "^1.3.2",
-        "sass-embedded": "^1.83.0",
-        "sort-object": "^3.0.3",
-        "trumbowyg": "^2.28.0",
-        "typescript": "^5.7.2",
-        "vite": "^6.0.2",
-        "vite-plugin-inspect": "^0.10.3",
-        "vue": "^3.5.13",
-        "vue-chartjs": "^5.3.2",
-        "vue-router": "^4.5.0",
-        "vue-upload-component": "^3.1.17",
-        "vuex": "^4.1.0",
-        "vuex-persistedstate": "^4.1.0",
-        "vuex-router-sync": "^5.0.0"
-    },
-    "devDependencies": {
-        "@tsconfig/node22": "^22.0.0",
-        "@types/jquery": "^3.5.32",
-        "@types/jsdom": "^21.1.7",
-        "@types/node": "^22.10.1",
-        "@types/pluralize": "^0.0.33",
-        "@vitest/ui": "2.1.8",
-        "@vue/compiler-sfc": "^3.5.13",
-        "@vue/eslint-config-prettier": "^10.1.0",
-        "@vue/eslint-config-typescript": "^14.1.4",
-        "@vue/test-utils": "^2.4.6",
-        "@vue/tsconfig": "^0.7.0",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^9.16.0",
-        "eslint-plugin-flowtype": "^8.0.3",
-        "eslint-plugin-html": "^8.1.2",
-        "eslint-plugin-vue": "^9.32.0",
-        "jsdom": "^25.0.1",
-        "laravel-vite-plugin": "^1.1.1",
-        "postcss": "^8.4.49",
-        "tailwindcss": "^3.4.16",
-        "vite-plugin-vue-devtools": "^7.6.7",
-        "vite-svg-loader": "^5.1.0",
-        "vitest": "^2.1.8",
-        "vue-class-component": "^7.2.6",
-        "vue-property-decorator": "^9.1.2"
-    }
+  "name": "lyntouch-database",
+  "version": "1.0.0",
+  "type": "module",
+  "no-optional": "true",
+  "license": "UNLICENSED",
+  "author": "Andrius Solopovas <andrius.solopovas@gmail.com>",
+  "description": "Lyntouch Database and Invoicing System",
+  "private": true,
+  "scripts": {
+    "start": "npm run dev",
+    "dev": "vite",
+    "prod": "vite build",
+    "phpunit": "phpunit",
+    "phpunit-watch": "phpunit-watcher watch",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
+  },
+  "dependencies": {
+    "@types/algoliasearch": "^4.0.4",
+    "@types/lodash-es": "^4.17.12",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/composition-api": "^1.7.2",
+    "algoliasearch": "^5.15.0",
+    "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.19",
+    "bun": "^1.1.38",
+    "caniuse-lite": "^1.0.30001769",
+    "canvas": "^2.11.2",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
+    "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "laravel-mix": "^6.0.49",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "npm": "^10.9.1",
+    "pluralize": "^8.0.0",
+    "prettier": "^3.4.2",
+    "qs": "^6.13.1",
+    "quill": "^2.0.3",
+    "rangy": "^1.3.2",
+    "sass-embedded": "^1.83.0",
+    "sort-object": "^3.0.3",
+    "trumbowyg": "^2.28.0",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.2",
+    "vite-plugin-inspect": "^0.10.3",
+    "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0",
+    "vue-upload-component": "^3.1.17",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0",
+    "vuex-router-sync": "^5.0.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/jquery": "^3.5.32",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^22.10.1",
+    "@types/pluralize": "^0.0.33",
+    "@vitest/ui": "2.1.8",
+    "@vue/compiler-sfc": "^3.5.13",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.4",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-vue": "^9.32.0",
+    "jsdom": "^25.0.1",
+    "laravel-vite-plugin": "^1.1.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "vite-plugin-vue-devtools": "^7.6.7",
+    "vite-svg-loader": "^5.1.0",
+    "vitest": "^2.1.8",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
+  }
 }
